# CarDashBoard

DashBoard/: CMakeLists.txt  CarSettings.qml  Display.qml  Rpm.qml  SpeedoMeter.qml  Steering.qml  main.cpp  main.qml  qml.qrc
DashBoard/DataSender/: CMakeLists.txt  vehicledatasender.cpp  vehicledatasender.h
DashBoard/SqlDataBase/: CMakeLists.txt  database.cpp  database.h
